# solar-advisor

./: .gitignore  LICENSE  README.md  update.sh
backend/: .env.example  .importlinter  Dockerfile  Dockerfile.api  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/src/solar_advisor/: collector.py  config.py
backend/src/solar_advisor/api/: app.py  schemas.py
backend/src/solar_advisor/domain/: purchase.py  schedule.py  telemetry.py
backend/src/solar_advisor/engine/: battery.py  inputs.py  objective.py  optimize.py  recommend_schedule.py  schedule_eval.py  tariff.py
backend/src/solar_advisor/estimation/: estimator.py
backend/src/solar_advisor/explain/: client.py  context.py  guard.py  prompt.py
backend/src/solar_advisor/forecast/: forecast_solar_provider.py  (+3 more)
backend/tests/: conftest.py  test_accumulator.py  test_api.py  test_api_explain.py  test_api_history.py  test_api_purchases.py  test_collector.py  test_config.py  test_deye_adapter.py  test_engine_battery.py  test_engine_objective.py  test_engine_optimize.py  test_engine_schedule_eval.py  test_engine_tariff.py  test_estimation.py  test_explain_client.py  test_explain_context.py  test_explain_guard.py  test_forecast_provider.py  test_forecast_providers.py  test_forecast_solar.py  test_live_ingest.py  test_mqtt_client.py  test_purchase_domain.py  test_purchase_store.py  test_recommend_schedule.py  test_recommendation_service.py  test_safety.py  test_schedule.py  test_schedule_ingest.py  test_sqlite_store.py  test_tariff_derivation.py  test_tariff_provider.py  test_timezone.py  test_topic_map.py
(+85 files in other folders)
